@@ -7,3 +7,4 @@
 - Added course list to profile page(@Chino96)
 - Changed course creation form and course model(@Chino96)
 - Created base Course Page Template(@Chino96)
+- Added read in file logic to courses/forms.py (@kh06089)
